...
        return Colors.teal;
    }
  }

  Widget _buildAddEventButton() {
    return FloatingActionButton(
      key: const ValueKey('add_event_button'),
      onPressed: () => _showAddEventDialog(),
      backgroundColor: Colors.teal,
      child: Icon(Icons.add, color: Colors.white),
    );
  }

...
      ),
      content: SingleChildScrollView(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            TextField(
              key: const ValueKey('event_name_field'),
              controller: nameController,
              decoration: InputDecoration(
                labelText: 'Name',
                labelStyle: TextStyle(color: Colors.teal),
                focusedBorder: OutlineInputBorder(
                  borderSide: BorderSide(color: Colors.teal),
                ),
              ),
            ),
            SizedBox(height: 10),
            TextField(
              key: const ValueKey('event_description_field'),
              controller: descriptionController,
              decoration: InputDecoration(
                labelText: 'Description',
                labelStyle: TextStyle(color: Colors.teal),
                focusedBorder: OutlineInputBorder(
                  borderSide: BorderSide(color: Colors.teal),
                ),
              ),
            ),
            SizedBox(height: 10),
            TextField(
              key: const ValueKey('event_location_field'),
              controller: locationController,
              decoration: InputDecoration(
                labelText: 'Location',
                labelStyle: TextStyle(color: Colors.teal),
                focusedBorder: OutlineInputBorder(
                  borderSide: BorderSide(color: Colors.teal),
...
                        ? 'No Date Chosen'
                        : 'Selected Date: ${DateFormat('dd-MM-yyyy').format(selectedDate!)}',
                    style: TextStyle(color: Colors.teal),
                  ),
                ),
                TextButton(
                  key: const ValueKey('choose_date_button'),
                  onPressed: _pickDate,
                  child: Text('Choose Date', style: TextStyle(color: Colors.red)),
                ),
              ],
            ),
          ],
        ),
      ),
      actions: [
        TextButton(
          key: const ValueKey('cancel_event_button'),
          onPressed: () => Navigator.of(context).pop(),
          child: Text('Cancel', style: TextStyle(color: Colors.teal)),
        ),
        TextButton(
          key: const ValueKey('save_event_button'),
          onPressed: _saveEvent,
...
